fix: MINE-1399 search icon IE11

--- a/src/shared/styles/icon.less
+++ b/src/shared/styles/icon.less
@@ -1,6 +1,7 @@
 .spotecicon {
   display: inline-block;
   width: 16px;
+  height: 16px;
   color: inherit;
   font-style: normal;
   line-height: 0;
